added test, updated reqs, implemented model persistance

--- a/learning_service/notebooks/stackoverflow_notebook.ipynb
+++ b/learning_service/notebooks/stackoverflow_notebook.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -217,7 +217,7 @@
       "text/plain": "                                               title                  tags\n0                How to draw a stacked dotplot in R?                   [r]\n1  mysql select all records where a datetime fiel...          [php, mysql]\n2             How to terminate windows phone 8.1 app                  [c#]\n3  get current time in a specific country via jquery  [javascript, jquery]\n4                      Configuring Tomcat to Use SSL                [java]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>tags</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>How to draw a stacked dotplot in R?</td>\n      <td>[r]</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>mysql select all records where a datetime fiel...</td>\n      <td>[php, mysql]</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>How to terminate windows phone 8.1 app</td>\n      <td>[c#]</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>get current time in a specific country via jquery</td>\n      <td>[javascript, jquery]</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Configuring Tomcat to Use SSL</td>\n      <td>[java]</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,13 +251,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:Make sure that locally built Python SDK docker image has Python 3.8 interpreter.\n"
+      "2022-05-26 18:45:00.434333: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2022-05-26 18:45:00.437334: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-05-26 18:45:00.437344: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n          });\n        }"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Make sure that locally built Python SDK docker image has Python 3.8 interpreter.\n",
+      "WARNING:apache_beam.io.tfrecordio:Couldn't find python-snappy so the implementation of _TFRecordUtil._masked_crc32c is not as fast as it could be.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/dan/tudelft/q4/remla/remla-stackoverflow-tagger/learning_service/notebooks/venv/lib/python3.8/site-packages/tensorflow_data_validation/utils/statistics_io_impl.py:100: tf_record_iterator (from tensorflow.python.lib.io.tf_record) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use eager execution and: \n",
+      "`tf.data.TFRecordDataset(path)`\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/dan/tudelft/q4/remla/remla-stackoverflow-tagger/learning_service/notebooks/venv/lib/python3.8/site-packages/tensorflow_data_validation/utils/statistics_io_impl.py:100: tf_record_iterator (from tensorflow.python.lib.io.tf_record) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use eager execution and: \n",
+      "`tf.data.TFRecordDataset(path)`\n"
      ]
     },
     {
@@ -294,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -318,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stderr",
@@ -340,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
@@ -364,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
@@ -538,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -566,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -581,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -590,13 +627,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "['draw stacked dotplot r',\n",
-       " 'mysql select records datetime field less specified value',\n",
-       " 'terminate windows phone 81 app']"
-      ]
+      "text/plain": "['draw stacked dotplot r',\n 'mysql select records datetime field less specified value',\n 'terminate windows phone 81 app']"
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -679,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -742,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -772,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -792,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -824,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -837,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -887,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -916,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -929,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -971,21 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "X_train_tfidf, X_val_tfidf, X_test_tfidf, tfidf_vocab = tfidf_features(X_train, X_val, X_test)\n",
-    "tfidf_reversed_vocab = {i:word for word,i in tfidf_vocab.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -994,11 +1013,37 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "1879"
-      ]
+      "text/plain": "['X_val_tfidf.joblib']"
      },
-     "execution_count": 31,
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "X_train_tfidf, X_val_tfidf, X_test_tfidf, tfidf_vocab = tfidf_features(X_train, X_val, X_test)\n",
+    "tfidf_reversed_vocab = {i:word for word,i in tfidf_vocab.items()}\n",
+    "\n",
+    "# needed for testing the model\n",
+    "joblib.dump(X_val_tfidf, 'X_val_tfidf.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1879"
+     },
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1040,11 +1085,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'c#'"
-      ]
+      "text/plain": "'c#'"
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1081,17 +1124,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['y_val.joblib']"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mlb = MultiLabelBinarizer(classes=sorted(tags_counts.keys()))\n",
     "y_train = mlb.fit_transform(y_train)\n",
-    "y_val = mlb.fit_transform(y_val)"
+    "y_val = mlb.fit_transform(y_val)\n",
+    "\n",
+    "# needed for testing the model\n",
+    "joblib.dump(y_val, 'y_val.joblib')"
    ]
   },
   {
@@ -1107,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1121,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1158,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1183,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1211,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1283,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1312,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1328,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1340,13 +1395,13 @@
      "output_type": "stream",
      "text": [
       "Bag-of-words\n",
-      "Accuracy score:  0.364\n",
-      "F1 score:  0.6561041610636967\n",
-      "Average precision score:  0.3557867491724902\n",
+      "Accuracy score:  0.3640333333333333\n",
+      "F1 score:  0.6561055351063915\n",
+      "Average precision score:  0.3558181261336162\n",
       "Tfidf\n",
-      "Accuracy score:  0.36546666666666666\n",
-      "F1 score:  0.6524691842778779\n",
-      "Average precision score:  0.34933186951042233\n"
+      "Accuracy score:  0.3654\n",
+      "F1 score:  0.6524199445737594\n",
+      "Average precision score:  0.3493153172341097\n"
      ]
     }
    ],
@@ -1373,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1382,6 +1437,28 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import roc_auc_score as roc_auc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.9336204646653563"
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc(y_val, y_val_predicted_scores_mybag, multi_class='ovo')"
    ]
   },
   {
@@ -1395,35 +1472,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.933617967153837"
-      ]
+      "text/plain": "0.9295858033291488"
      },
      "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "roc_auc(y_val, y_val_predicted_scores_mybag, multi_class='ovo')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9295802478474248"
-      ]
-     },
-     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1449,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1477,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1526,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1559,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1593,14 +1644,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['classifier.joblib']"
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# needed for testing the model\n",
+    "joblib.dump(classifier_tfidf, 'classifier.joblib')"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": []
+   }
   }
  ],
  "metadata": {
