--- a/learning_service/notebooks/stackoverflow_notebook.ipynb
+++ b/learning_service/notebooks/stackoverflow_notebook.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -43,24 +43,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: nltk in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (3.7)\n",
-      "Requirement already satisfied: pandas in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (1.3.5)\n",
-      "Requirement already satisfied: numpy in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (1.21.6)\n",
-      "Requirement already satisfied: sklearn in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (0.0)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from nltk) (2022.4.24)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from nltk) (4.64.0)\n",
-      "Requirement already satisfied: joblib in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from nltk) (0.14.1)\n",
-      "Requirement already satisfied: click in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from nltk) (8.1.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from pandas) (2022.1)\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from sklearn) (1.0.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
-      "Requirement already satisfied: importlib-metadata in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from click->nltk) (4.11.4)\n",
-      "Requirement already satisfied: colorama in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from click->nltk) (0.4.4)\n",
-      "Requirement already satisfied: scipy>=1.1.0 in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from scikit-learn->sklearn) (1.7.3)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from scikit-learn->sklearn) (3.1.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.4 in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from importlib-metadata->click->nltk) (4.2.0)\n",
-      "Requirement already satisfied: zipp>=0.5 in c:\\users\\krysb\\documents\\github\\remla-stackoverflow-tagger\\learning_service\\notebooks\\notebook_env\\lib\\site-packages (from importlib-metadata->click->nltk) (3.8.0)\n"
+      "Requirement already satisfied: nltk in /home/krysb/.local/lib/python3.8/site-packages (3.7)\n",
+      "Requirement already satisfied: pandas in /home/krysb/.local/lib/python3.8/site-packages (1.4.2)\n",
+      "Requirement already satisfied: numpy in /home/krysb/.local/lib/python3.8/site-packages (1.22.3)\n",
+      "/home/krysb/.local/lib/python3.8/site-packages/cryptography/hazmat/backends/openssl/x509.py:14: CryptographyDeprecationWarning: This version of cryptography contains a temporary pyOpenSSL fallback path. Upgrade pyOpenSSL now.\n",
+      "  warnings.warn(\n",
+      "Collecting sklearn\n",
+      "  Downloading sklearn-0.0.tar.gz (1.1 kB)\n",
+      "Requirement already satisfied: joblib in /home/krysb/.local/lib/python3.8/site-packages (from nltk) (1.1.0)\n",
+      "Requirement already satisfied: click in /usr/lib/python3/dist-packages (from nltk) (7.0)\n",
+      "Requirement already satisfied: tqdm in /home/krysb/.local/lib/python3.8/site-packages (from nltk) (4.64.0)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /home/krysb/.local/lib/python3.8/site-packages (from nltk) (2022.4.24)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/krysb/.local/lib/python3.8/site-packages (from pandas) (2022.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/krysb/.local/lib/python3.8/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: scikit-learn in /home/krysb/.local/lib/python3.8/site-packages (from sklearn) (1.1.1)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.14.0)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in /home/krysb/.local/lib/python3.8/site-packages (from scikit-learn->sklearn) (1.8.1)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/krysb/.local/lib/python3.8/site-packages (from scikit-learn->sklearn) (3.1.0)\n",
+      "Building wheels for collected packages: sklearn\n",
+      "  Building wheel for sklearn (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for sklearn: filename=sklearn-0.0-py2.py3-none-any.whl size=1315 sha256=0938f7ba85747e22877c44a62e1eaa8aa46f2bf2d0f4c95607f665e22ee78d91\n",
+      "  Stored in directory: /home/krysb/.cache/pip/wheels/22/0b/40/fd3f795caaa1fb4c6cb738bc1f56100be1e57da95849bfc897\n",
+      "Successfully built sklearn\n",
+      "Installing collected packages: sklearn\n",
+      "Successfully installed sklearn-0.0\n"
      ]
     }
    ],
@@ -247,7 +253,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -260,7 +265,6 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -268,7 +272,31 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n          });\n        }"
+      "application/javascript": [
+       "\n",
+       "        if (typeof window.interactive_beam_jquery == 'undefined') {\n",
+       "          var jqueryScript = document.createElement('script');\n",
+       "          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n",
+       "          jqueryScript.type = 'text/javascript';\n",
+       "          jqueryScript.onload = function() {\n",
+       "            var datatableScript = document.createElement('script');\n",
+       "            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n",
+       "            datatableScript.type = 'text/javascript';\n",
+       "            datatableScript.onload = function() {\n",
+       "              window.interactive_beam_jquery = jQuery.noConflict(true);\n",
+       "              window.interactive_beam_jquery(document).ready(function($){\n",
+       "                \n",
+       "              });\n",
+       "            }\n",
+       "            document.head.appendChild(datatableScript);\n",
+       "          };\n",
+       "          document.head.appendChild(jqueryScript);\n",
+       "        } else {\n",
+       "          window.interactive_beam_jquery(document).ready(function($){\n",
+       "            \n",
+       "          });\n",
+       "        }"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -344,7 +372,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -423,7 +450,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -445,7 +471,6 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -482,7 +507,6 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -514,7 +538,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -526,7 +549,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -1910,7 +1932,7 @@
    "hash": "981990f3a415f9d9b17d0c5232d73640060c74b6f4b4cba6970ea41714be4028"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.4 ('notebook_env')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1924,7 +1946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
