--- a/learning_service/notebooks/stackoverflow_notebook.ipynb
+++ b/learning_service/notebooks/stackoverflow_notebook.ipynb
@@ -272,31 +272,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "\n",
-       "        if (typeof window.interactive_beam_jquery == 'undefined') {\n",
-       "          var jqueryScript = document.createElement('script');\n",
-       "          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n",
-       "          jqueryScript.type = 'text/javascript';\n",
-       "          jqueryScript.onload = function() {\n",
-       "            var datatableScript = document.createElement('script');\n",
-       "            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n",
-       "            datatableScript.type = 'text/javascript';\n",
-       "            datatableScript.onload = function() {\n",
-       "              window.interactive_beam_jquery = jQuery.noConflict(true);\n",
-       "              window.interactive_beam_jquery(document).ready(function($){\n",
-       "                \n",
-       "              });\n",
-       "            }\n",
-       "            document.head.appendChild(datatableScript);\n",
-       "          };\n",
-       "          document.head.appendChild(jqueryScript);\n",
-       "        } else {\n",
-       "          window.interactive_beam_jquery(document).ready(function($){\n",
-       "            \n",
-       "          });\n",
-       "        }"
-      ]
+      "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n          });\n        }"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -1946,7 +1922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
