Moved project files to the src directory

--- a/src/learning_service/notebooks/stackoverflow_notebook.ipynb
+++ b/src/learning_service/notebooks/stackoverflow_notebook.ipynb
@@ -61,8 +61,8 @@
       "Requirement already satisfied: scipy>=1.3.2 in /home/krysb/.local/lib/python3.8/site-packages (from scikit-learn->sklearn) (1.8.1)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/krysb/.local/lib/python3.8/site-packages (from scikit-learn->sklearn) (3.1.0)\n",
       "Building wheels for collected packages: sklearn\n",
-      "  Building wheel for sklearn (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for sklearn: filename=sklearn-0.0-py2.py3-none-any.whl size=1315 sha256=0938f7ba85747e22877c44a62e1eaa8aa46f2bf2d0f4c95607f665e22ee78d91\n",
+      "  Building wheel for sklearn (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25h  Created wheel for sklearn: filename=sklearn-0.0-py2.py3-none-any.whl size=1315 sha256=0938f7ba85747e22877c44a62e1eaa8aa46f2bf2d0f4c95607f665e22ee78d91\n",
       "  Stored in directory: /home/krysb/.cache/pip/wheels/22/0b/40/fd3f795caaa1fb4c6cb738bc1f56100be1e57da95849bfc897\n",
       "Successfully built sklearn\n",
       "Installing collected packages: sklearn\n",
